# algorithm-api

./: Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  setup.cfg
algorithm_api/: main.py
algorithm_api/routers/: __init__.py  search.py
