[metadata]
name = algorithm-api
version = "0.1.0"
long_description = file: README.md
license = MIT
license_files = LICENSE

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires = 
    fastapi>=0.73
    uvicorn[standard]>=0.14.0, <0.18
    celery>=5.1, <=5.2.3
    eventlet>=0.29
    pydantic>=1.8

[flake8]
extend-ignore = E501,W503,F401,F403,F405,E203,B008
extend-select = B9
max-line-length = 88
max-complexity = 18
exclude =
    .git
    __pycache__
    build
    dist